backend/check_output_2.txt
    Checking karuteens_backend v0.1.0 (/home/admin/KaruTeens1/backend)
error[E0308]: mismatched types
   --> src/content.rs:844:5
    |
773 | ) -> Result<impl IntoResponse, (StatusCode, Json<serde_json::Value>)> {
    |      ---------------------------------------------------------------- expected `Result<(StatusCode, Json<Value>), (StatusCode, Json<Value>)>` because of return type
...
844 |     get_trending_posts_handler(State(state), user, axum::extract::Query(query)).await.map(|r| r.into_response())
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<(StatusCode, Json<Value>), ...>`, found `Result<Response<Body>, (..., ...)>`
    |
    = note: expected enum `Result<(axum::http::StatusCode, axum::Json<serde_json::Value>), _>`
               found enum `Result<axum::http::Response<axum::body::Body>, _>`
    = note: the full name for the type has been written to '/home/admin/KaruTeens1/backend/target/debug/deps/karuteens_backend-fdb9cdf0aaf74c68.long-type-6885257111765026568.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `content::LocationRequest: serde::Serialize` is not satisfied
    --> src/content.rs:1139:54
     |
1139 |         if let Ok(loc_bson) = mongodb::bson::to_bson(&loc) {
     |                               ---------------------- ^^^^ unsatisfied trait bound
     |                               |
     |                               required by a bound introduced by this call
     |
help: the trait `Serialize` is not implemented for `content::LocationRequest`
    --> src/content.rs:22:1
     |
  22 | pub struct LocationRequest {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^
     = note: for local types consider adding `#[derive(serde::Serialize)]` to your `content::LocationRequest` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Serialize`:
               &'a T
               &'a mut T
               &RawArray
               &RawDocument
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
             and 505 others
note: required by a bound in `to_bson`
    --> /home/admin/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/bson-2.15.0/src/ser/mod.rs:117:8
     |
 115 | pub fn to_bson<T>(value: &T) -> Result<Bson>
     |        ------- required by a bound in this function
 116 | where
 117 |     T: Serialize + ?Sized,
     |        ^^^^^^^^^ required by this bound in `to_bson`

warning: variable does not need to be mutable
    --> src/content.rs:1200:9
     |
1200 |     let mut draft = posts_collection.find_one(doc! { 
     |         ----^^^^^
     |         |
     |         help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
warning: `karuteens_backend` (lib) generated 1 warning
error: could not compile `karuteens_backend` (lib) due to 2 previous errors; 1 warning emitted
